--add-opens=java.base/java.lang=ALL-UNNAMED
--add-opens=java.base/java.io=ALL-UNNAMED
-Djava.awt.headless=true
-Djavax.net.ssl.trustStore=/Users/huajiang/software/jdk-23/Contents/Home/lib/security/cacerts
-Djavax.net.ssl.trustStoreType=PKCS12
-Djavax.net.ssl.trustStorePassword=changeit
